--- a/prefect.yaml
+++ b/prefect.yaml
@@ -14,8 +14,10 @@ push:
 
 # pull section allows you to provide instructions for cloning this project in remote locations
 pull:
-- prefect.deployments.steps.set_working_directory:
-    directory: /Users/riellygriffiths/Documents/Python/Prefect
+- prefect.deployments.steps.git_clone:
+    repository: https://github.com/riellygriff/prefect-modal.git
+    branch: main
+    credentials: "{{prefect.blocks.github-credentials.personal-github}}"
 
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
